<resources>
    <string name="app_name">Phmarcy Management</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="BUY_ID">Purchase Entry</string>
    <string name="SELL_ID">Sales Entry</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="medicine_name">Medicine Name</string>
    <string name="cancel_button">CANCEL</string>
    <string name="create_button">CREATE</string>
    <string name="medicine_price">Medicine Price</string>

    <string name="cross_image_content_description">Delete student from SQLite database</string>
    <string name="edit_button_description">Edit Single student information</string>
    <string name="price">Price</string>
    <string name="name">Name</string>
    <string name="units">Units</string>
    <string name="Plus">+</string>
    <string name="daily_sell_report">Daily Sell Report</string>
    <string name="due_list">Due List</string>
    <string name="customar_name">Customar Name</string>
    <string name="taka">Taka</string>
    <string name="customer_name">Customer Name</string>
    <string name="due_price">Due Price</string>
    <string name="due">DUE</string>
    <string name="payment">Payment..</string>
    <string name="paid">PAID</string>
    <string name="update">Update</string>
    <string name="sell">Sell</string>
    <string name="product_name">Product Name</string>
    <string name="total_price">Total Price =</string>
    <string name="clear">Clear</string>
    <string name="mahibulhassan842_gmail_com">mahibulhassan842@gmail.com</string>
    <string name="phmarcy_management">Phmarcy Management</string>
    <string name="developer_details">Developer Details</string>
</resources>