<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".ui.DueLIst.updateCustomrdetails.view.DueEditFragment">

    <EditText
        android:id="@+id/price_new_due"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/payment"
        android:inputType="number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <RadioGroup
        android:id="@+id/radio_groupid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price_new_due"
        tools:ignore="MissingConstraints">

        <RadioButton
            android:id="@+id/due_radioid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/due"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/paid_radioid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/paid"
            android:textSize="18sp" />
    </RadioGroup>

    <Button
        android:id="@+id/due_updateButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/purple_500"
        android:text="@string/update"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/due_cancelbButton"
        app:layout_constraintTop_toBottomOf="@+id/radio_groupid" />

    <Button
        android:id="@+id/due_cancelbButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/purple_500"
        android:text="@string/cancel_button"
        app:layout_constraintLeft_toRightOf="@+id/due_updateButton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio_groupid" />

</androidx.constraintlayout.widget.ConstraintLayout>