<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:padding="8dp"
tools:context=".ui.buylist.addmedicine.view.BuyMedicineFragment">

<EditText
    android:id="@+id/medicine_name"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:hint="@string/medicine_name"
    android:inputType="text" />

<EditText
    android:id="@+id/price_medicine"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/medicine_name"
    android:hint="@string/medicine_price"
    android:inputType="number" />

<EditText
    android:id="@+id/unit_medicine"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/price_medicine"
    android:hint="Medicine Unit"
    android:inputType="number" />
<Button
    android:id="@+id/createButton"
    android:layout_width="0dp"
    android:backgroundTint="@color/purple_500"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@+id/unit_medicine"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toLeftOf="@+id/cancelButton"
    android:text="@string/create_button"/>

<Button
    android:id="@+id/cancelButton"
    android:layout_width="0dp"
    android:backgroundTint="@color/purple_500"
    android:layout_height="wrap_content"
    android:layout_marginStart="4dp"
    app:layout_constraintTop_toBottomOf="@+id/unit_medicine"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintLeft_toRightOf="@+id/createButton"
    android:text="@string/cancel_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>