<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="10dp"
    android:background="#B3CEE4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment" >

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/btn_buy"
        android:layout_width="match_parent"
        android:backgroundTint="#6C78BA"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btn_sell"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="match_parent"
            android:drawableTop="@drawable/buypic"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="#FBFBFB"
            android:text="@string/BUY_ID"
            android:textSize="30sp" />
    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:backgroundTint="#6C78BA"
        android:layout_marginTop="5dp"
        android:layout_height="0dp"
        android:id="@+id/btn_sell"
        app:layout_constraintTop_toBottomOf="@id/btn_buy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/guideline_id"
        tools:ignore="MissingConstraints">
        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableTop="@drawable/sellpic"
            android:gravity="center"
            android:textColor="#FBFBFB"
            android:text="@string/SELL_ID"
            android:textSize="30sp" />
    </com.google.android.material.card.MaterialCardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".5"
        />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/btn_day_sell"
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:backgroundTint="#6C78BA"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_Due_list"
        app:layout_constraintTop_toBottomOf="@+id/guideline_id"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="match_parent"
            android:drawableTop="@drawable/sell_report"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="#FBFBFB"
            android:text="@string/daily_sell_report"
            android:textSize="30sp" />
    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:backgroundTint="#6C78BA"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:id="@+id/btn_Due_list"
        app:layout_constraintTop_toBottomOf="@id/btn_day_sell"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints">
        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableTop="@drawable/duepic"
            android:gravity="center"
            android:textColor="#FBFBFB"
            android:text="@string/due_list"
            android:textSize="30sp" />
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>